--- a/scss/style.scss
+++ b/scss/style.scss
@@ -164,7 +164,7 @@ body {
     background: #474747;
     border-radius: 2px;
     margin: 2px;
-
+    cursor: pointer;
     &__column {
         display: flex;
     }
